# cas-practic

./: pyproject.toml
notebooks/: prova.ipynb
penguins-classifier/: decision_tree_model.pkl  knn_model.pkl  logistic_regression_model.pkl  pyproject.toml  svm_model.pkl
penguins-classifier/penguins_classifier/: app.py  client.py  data_preparation.py  model_training.py  requirements.txt
tests/: prova-pandas.py
