[tool.poetry]
name = "penguins-classifier"
version = "0.1.0"
description = ""
authors = ["Eric <erik191092@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
flask = "^3.1.0"
joblib = "^1.4.2"
requests = "^2.32.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
